[gd_scene load_steps=4 format=3 uid="uid://begfd5sjpx6kj"]

[ext_resource type="Script" uid="uid://1jq1xohaqtni" path="res://scripts/text_sign.gd" id="1_x8hlw"]
[ext_resource type="Texture2D" uid="uid://bcmbg0i7yxg2m" path="res://assets/sprites/world_tileset.png" id="2_dpdqf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eq0j8"]
size = Vector2(68, 32)

[node name="TextSign" type="Node2D"]
position = Vector2(0, -8)
script = ExtResource("1_x8hlw")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_eq0j8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.14286, 1.14286)
texture = ExtResource("2_dpdqf")
region_enabled = true
region_rect = Rect2(129, 50, 14, 14)

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
